--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
-    "hubot-cron": ">= 0.1.0"
+    "hubot-cron": ">= 0.1.0",
+    "htmlparser": "1.7.6",
+    "soupselect": "0.2.0"
   },
   "engines": {
     "node": "0.10.x"
