--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hubot-shipit": "^0.2.0",
     "hubot-cron": ">= 0.1.0",
     "htmlparser": "1.7.6",
-    "soupselect": "0.2.0"
+    "soupselect": "0.2.0",
+    "hubot-giphy-gifme": "0.1.2"
   },
   "engines": {
     "node": "0.10.x"
